[tool.poetry]
name = "paigram-logger"
version = "0.1.0"
description = "A logger for PaiGram's projects."
authors = ["Karako <karakohear@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "paigram_logger"}]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.3.3"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
